commit translated contents

--- a/articles/batch/TOC.yml
+++ b/articles/batch/TOC.yml
@@ -61,6 +61,8 @@
           href: batch-account-create-portal.md
         - name: Batch-accounts beheren met Batch Management .NET
           href: batch-management-dotnet.md
+        - name: Kostenanalyse en budgetten
+          href: budget.md
     - name: Verifiëren met Azure AD
       items:
         - name: Azure AD met Batch-service
