--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -41,6 +41,8 @@
           href: logic-apps-create-logic-apps-from-templates.md
         - name: Migreren vanuit BizTalk Services
           href: logic-apps-move-from-mabs.md
+        - name: Stromen exporteren vanuit Microsoft Flow en implementeren in Azure Logic Apps
+          href: export-from-microsoft-flow-logic-app-template.md
         - name: Werkstroomuitvoering beheren
           items:
             - name: Voorwaardelijke instructies
