--- a/articles/virtual-machines/workloads/oracle/toc.yml
+++ b/articles/virtual-machines/workloads/oracle/toc.yml
@@ -20,6 +20,8 @@
       href: configure-oracle-golden-gate.md
 - name: Concepten
   items:
+    - name: Oracle-toepassingsarchitecturen
+      href: oracle-oci-applications.md
     - name: Een Oracle-database ontwerpen
       href: oracle-design.md
     - name: Back-upstrategie voor Oracle-databases
