--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -212,7 +212,7 @@
       items:
         - name: ILB met een App Service-omgeving
           href: create-gateway-internal-load-balancer-app-service-environment.md
-        - name: Omleiding naar de URL van App Service
+        - name: App-serviceproblemen
           href: troubleshoot-app-service-redirection-app-service-url.md
         - name: Problemen met sessieaffiniteit
           href: how-to-troubleshoot-application-gateway-session-affinity-issues.md
