--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -31,9 +31,9 @@
           href: ../aks/tutorial-kubernetes-prepare-app.md
 - name: Snelstartgidsen
   items:
-    - name: Een account maken in Azure Portal
+    - name: Een nieuwe resource maken met de Azure-portal
       href: cognitive-services-apis-create-account.md
-    - name: Een account maken met behulp van de Azure CLI
+    - name: Een nieuwe resource maken met de Azure CLI
       href: cognitive-services-apis-create-account-cli.md
     - name: Verificatie
       href: authentication.md
