--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -334,16 +334,16 @@
           href: cognitive-search-skill-keyphrases.md
         - name: Taaldetectie
           href: cognitive-search-skill-language-detection.md
-        - name: Herkenning van benoemde entiteiten
-          href: cognitive-search-skill-named-entity-recognition.md
         - name: Herkenning van entiteiten
           href: cognitive-search-skill-entity-recognition.md
         - name: Tekst samenvoegen
           href: cognitive-search-skill-textmerger.md
         - name: Tekst splitsen
           href: cognitive-search-skill-textsplit.md
-        - name: Stemming
+        - name: Sentiment
           href: cognitive-search-skill-sentiment.md
+        - name: Text Translation (preview)
+          href: cognitive-search-skill-text-translation.md
         - name: Analyse van de afbeelding
           href: cognitive-search-skill-image-analysis.md
         - name: OCR
@@ -352,12 +352,15 @@
           href: cognitive-search-skill-shaper.md
         - name: Voorwaardelijk
           href: cognitive-search-skill-conditional.md
-        - name: Afgeschafte vaardigheden
-          href: cognitive-search-skill-deprecated.md
     - name: Aangepaste vaardigheden
       items:
         - name: Aangepaste Web-API
           href: cognitive-search-custom-skill-web-api.md
+    - name: Afgeschafte vaardigheden
+      href: cognitive-search-skill-deprecated.md
+      items:
+        - name: Herkenning van benoemde entiteiten
+          href: cognitive-search-skill-named-entity-recognition.md
 - name: Resources
   items:
     - name: Ondersteuning van de Azure-community
