--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -46,7 +46,7 @@
   href: code-samples.md
 - name: Concepten
   items:
-    - name: Typen toepassingen
+    - name: Toepassingstypen
       href: active-directory-b2c-apps.md
     - name: Verificatieprotocollen
       href: active-directory-b2c-reference-protocols.md
