--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -27,6 +27,8 @@
       href: tutorial-azure-monitor-stream-logs-to-event-hub.md
 - name: Concepten
   items:
+    - name: Een implementatie van rapportage en bewaking plannen
+      href: plan-monitoring-and-reporting.md
     - name: Auditlogboeken
       href: concept-audit-logs.md
     - name: Aanmeldingslogboeken
