--- a/articles/active-directory/user-help/toc.yml
+++ b/articles/active-directory/user-help/toc.yml
@@ -74,6 +74,8 @@
           href: security-info-setup-text-msg.md
         - name: Telefoongesprekken instellen
           href: security-info-setup-phone-number.md
+        - name: Een beveiligingssleutel instellen
+          href: security-info-setup-security-key.md
         - name: E-mail instellen
           href: security-info-setup-email.md
         - name: Beveiligingsvragen instellen
