--- a/articles/hdinsight/hbase/TOC.yml
+++ b/articles/hdinsight/hbase/TOC.yml
@@ -238,10 +238,14 @@
       items:
         - name: HDInsight-architectuur voor virtueel netwerk
           href: ../hdinsight-virtual-network-architecture.md
+        - name: VNETs plannen voor HDInsight
+          href: ../hdinsight-plan-virtual-network-deployment.md
+        - name: VNETs maken voor HDInsight
+          href: ../hdinsight-create-virtual-network.md
+        - name: Vereiste IP-adressen voor NSG's en UDR's
+          href: ../hdinsight-management-ip-addresses.md
         - name: Firewall gebruiken om uitgaand verkeer te beperken
           href: ../hdinsight-restrict-outbound-traffic.md
-        - name: HDInsight in Azure VNet
-          href: ../hdinsight-extend-hadoop-virtual-network.md
         - name: HDInsight verbinden met een on-premises netwerk
           href: ../connect-on-premises-network.md
         - name: Een Apache HBase-cluster maken in Azure VNet
