--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -100,6 +100,8 @@
               href: backup-mabs-unattended-install.md
         - name: Workloads beveiligen
           items:
+            - name: Back-up maken van virtuele Hyper-V-machines
+              href: back-up-hyper-v-virtual-machines-mabs.md
             - name: VMware-server
               href: backup-azure-backup-server-vmware.md
             - name: Exchange
