--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -303,10 +303,12 @@
           href: test-logic-apps-mock-data-static-results.md
     - name: Implementeren
       items:
+        - name: Overzicht - Implementatie van logische apps automatiseren
+          href: logic-apps-azure-resource-manager-templates-overview.md
         - name: Sjablonen voor logische app maken
-          href: logic-apps-create-deploy-template.md
+          href: logic-apps-create-azure-resource-manager-templates.md
         - name: Sjablonen voor logische app gebruiken
-          href: logic-apps-create-deploy-azure-resource-manager-templates.md
+          href: logic-apps-deploy-azure-resource-manager-templates.md
     - name: Controleren
       items:
         - name: Logische apps bewaken
@@ -377,7 +379,7 @@
     - name: Azure-roadmap
       href: 'https://azure.microsoft.com/roadmap/'
     - name: MSDN-forum
-      href: 'https://social.msdn.microsoft.com/Forums/azure/en-US/home?forum=azurelogicapps'
+      href: 'https://social.msdn.microsoft.com/Forums/azure/home?forum=azurelogicapps'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-logic-apps'
     - name: Twitter
