--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -63,18 +63,18 @@
       href: template-best-practices.md
     - name: Sjablonen voor de consistentie van de cloud
       href: templates-cloud-consistency.md
-    - name: Resourceproviders en -typen
-      href: resource-manager-supported-services.md
-    - name: Configuratiebeheer
-      displayName: adm
-      href: deployment-manager-overview.md
-    - name: Statuscontrole in Configuratiebeheer
-      displayName: adm
-      href: deployment-manager-health-check.md
     - name: Implementatiemodi
       href: deployment-modes.md
     - name: Verwijderen van resource
       href: resource-group-delete.md
+    - name: Configuratiebeheer
+      items:
+        - name: Overzicht
+          displayName: 'adm, deployment manager'
+          href: deployment-manager-overview.md
+        - name: Statuscontrole
+          displayName: 'adm, deployment manager'
+          href: deployment-manager-health-check.md
     - name: Resource Manager en klassieke implementatie
       href: resource-manager-deployment-model.md
     - name: Algemene Azure-beveiligingskenmerken
@@ -228,6 +228,8 @@
           href: resource-manager-sku-not-available-errors.md
         - name: Windows-implementatieproblemen
           href: ../virtual-machines/windows/troubleshoot-deploy-vm.md
+    - name: Resourceproviders en -typen
+      href: resource-manager-supported-services.md
     - name: Aanvraagbeperkingen
       href: resource-manager-request-limits.md
     - name: Asynchrone bewerkingen bijhouden
