--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -5,6 +5,8 @@
   items:
     - name: Wat zijn cognitieve services?
       href: Welcome.md
+    - name: Aangepaste subdomeinen voor Cognitive Services
+      href: cognitive-services-custom-subdomains.md
     - name: Cognitive Services en machine learning
       href: cognitive-services-and-machine-learning.md
     - name: Taalondersteuning
