--- a/articles/sql-data-warehouse/TOC.yml
+++ b/articles/sql-data-warehouse/TOC.yml
@@ -127,11 +127,25 @@
           href: sql-data-warehouse-overview-develop.md
         - name: Aanbevolen procedures
           href: sql-data-warehouse-best-practices-development.md
+        - name: JSON
+          items:
+            - name: JSON
+              href: /sql/t-sql/functions/json-functions-transact-sql?view=azure-sqldw-latest
+            - name: ISJSON
+              href: /sql/t-sql/functions/isjson-transact-sql?view=azure-sqldw-latest
+            - name: JSON_VALUE
+              href: /sql/t-sql/functions/json-value-transact-sql?view=azure-sqldw-latest
+            - name: JSON_QUERY
+              href: /sql/t-sql/functions/json-query-transact-sql?view=azure-sqldw-latest
+            - name: JSON_MODIFY
+              href: /sql/t-sql/functions/json-modify-transact-sql?view=azure-sqldw-latest
+            - name: OPENJSON
+              href: /sql/t-sql/functions/openjson-transact-sql?view=azure-sqldw-latest
         - name: Gerealiseerde weergave
           items:
-            - name: Gerealiseerde weergave maken zoals geselecteerd (Transact-SQL)
+            - name: Maken
               href: /sql/t-sql/statements/create-materialized-view-as-select-transact-sql
-            - name: Gerealiseerde weergave wijzigen zoals geselecteerd (Transact-SQL)
+            - name: Bewerken
               href: /sql/t-sql/statements/alter-materialized-view-transact-sql
         - name: Caching van resultatenset
           href: /sql/t-sql/statements/set-result-set-caching-transact-sql
@@ -281,6 +295,16 @@
           href: sql-data-warehouse-manage-monitor.md
         - name: Gen2-cache bewaken
           href: sql-data-warehouse-how-to-monitor-cache.md
+    - name: Back-ups en herstellen
+      items:
+        - name: Herstelpunten maken
+          href: sql-data-warehouse-restore-points.md
+        - name: Een bestaande datawarehouse herstellen
+          href: sql-data-warehouse-restore-active-paused-dw.md
+        - name: Een verwijderde datawarehouse herstellen
+          href: sql-data-warehouse-restore-deleted-dw.md
+        - name: Herstellen vanaf geo-back-up
+          href: sql-data-warehouse-restore-from-geo-backup.md
     - name: Integreren
       items:
         - name: Machine Learning gebruiken
